<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.mindenit.schedule.ui.home.HomeFragment"
        android:label=""
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.mindenit.schedule.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.mindenit.schedule.ui.settings.SettingsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_settings">
        <action
            android:id="@+id/action_settings_to_manage_links"
            app:destination="@id/navigation_manage_links" />
        <action
            android:id="@+id/action_settings_to_manage_hidden_subjects"
            app:destination="@id/navigation_manage_hidden_subjects" />
        <action
            android:id="@+id/action_settings_to_logs"
            app:destination="@id/navigation_logs" />
    </fragment>

    <fragment
        android:id="@+id/navigation_manage_links"
        android:name="com.mindenit.schedule.ui.settings.ManageLinksFragment"
        android:label="@string/links_manage_screen_title"
        tools:layout="@layout/fragment_manage_links" />

    <fragment
        android:id="@+id/navigation_manage_hidden_subjects"
        android:name="com.mindenit.schedule.ui.settings.ManageHiddenSubjectsFragment"
        android:label="@string/hidden_subjects_screen_title"
        tools:layout="@layout/fragment_manage_hidden_subjects" />

    <fragment
        android:id="@+id/navigation_logs"
        android:name="com.mindenit.schedule.ui.settings.LogViewerFragment"
        android:label="@string/logs_screen_title"
        tools:layout="@layout/fragment_logs" />
</navigation>